--- a/apps/ledger-live-desktop/static/i18n/zh/app.json
+++ b/apps/ledger-live-desktop/static/i18n/zh/app.json
@@ -608,13 +608,13 @@
   },
   "stake" : {
     "noFundsModal" : {
-      "title" : "Buy, swap or receive",
-      "text" : "You do not have enough {{coin}} available to stake",
-      "description" : "Not enough funds? Don’t worry, you can securely buy, swap or receive crypto directly in Ledger Live.",
+      "title" : "买入、互换或接收",
+      "text" : "您没有足够的 {{coin}} 可供权益质押",
+      "description" : "资金不足？别担心，您可以直接在 Ledger Live 中买入、互换或接收加密货币。",
       "options" : {
         "buy" : {
           "title" : "买入",
-          "body" : "Buy with trusted  providers"
+          "body" : "通过值得信赖的服务提供商买入"
         },
         "swap" : {
           "title" : "互换",
@@ -623,7 +623,7 @@
         },
         "receive" : {
           "title" : "接收",
-          "body" : "Receive crypto in your wallet"
+          "body" : "在您的钱包中接收加密货币"
         }
       }
     }
@@ -824,7 +824,20 @@
       "delegation" : {
         "title" : "您知道吗……",
         "description" : "使用 Ledger 验证器权益质押 {{asset}}，仅需 {{commission}}% 的佣金。",
-        "cta" : "使用 Ledger 进行权益质押"
+        "cta" : "使用 Ledger 进行权益质押",
+        "linkText" : "了解更多",
+        "ethereum" : {
+          "lido" : {
+            "title" : "您知道吗……",
+            "description" : "使用 Lido 权益质押您的以太币，每天赚取奖励。无锁定期。无最低存款限制。",
+            "cta" : "使用 Lido 权益质押"
+          },
+          "kiln" : {
+            "title" : "请不要仅仅长期持有。增长您的以太币",
+            "description" : "有超过 32 个以太币？不妨使用 Kiln 安全权益质押您的以太币来赚取被动奖励。",
+            "cta" : "使用 Kiln 权益质押"
+          }
+        }
       }
     }
   },
@@ -1399,7 +1412,7 @@
         "label" : "热门"
       },
       "earn" : {
-        "title" : "赚取",
+        "title" : "权益质押",
         "description" : "通过 Ledger 增长加密资产"
       }
     }
@@ -3472,6 +3485,71 @@
       "providerLink" : "了解关于 {{provider}} 的更多信息..."
     }
   },
+  "avalanchepchain" : {
+    "account" : {
+      "subHeader" : {
+        "cardTitle" : "由 Figment 提供支持",
+        "moreInfo" : "更多信息",
+        "drawerTitle" : "由 Figment 提供支持",
+        "title" : "Ledger Live 现已支持 AVAX 代币",
+        "description" : "您现在可以开始通过 Ledger Live 管理并保护您的 AVAX 代币。",
+        "website" : "由 Figment 提供支持"
+      }
+    },
+    "stakedBalance" : "权益质押",
+    "stakedBalanceTooltip" : "质押给验证者的数额。",
+    "delegation" : {
+      "header" : "委托",
+      "add" : "添加",
+      "commission" : "佣金",
+      "validator" : "节点 ID",
+      "startTime" : "开始时间",
+      "endTime" : "结束时间",
+      "stakeAmount" : "权益质押",
+      "potentialReward" : "潜在奖励",
+      "emptyState" : {
+        "description" : "您可以通过委托资产赚取 AVAX 奖励。",
+        "info" : "委托机制如何运作",
+        "delegation" : "赚取奖励"
+      },
+      "notEnoughToDelegate" : "您必须在 P 链上至少有 25 个可用 AVAX 才能成为委托人。",
+      "validatorStake" : "验证者权益质押",
+      "validatorRemainingStake" : "可用",
+      "flow" : {
+        "title" : "委托",
+        "steps" : {
+          "starter" : {
+            "description" : "您可以通过将 AVAX 资产委托给验证者来赚取奖励。",
+            "bullet" : ["您保有对已委托资产的所有权", "使用您的 Ledger 设备进行委托", "至少需要 25 AVAX 才能进行权益质押", "AVAX 必须至少委托 2 周"]
+          },
+          "amount" : {
+            "title" : "数额"
+          },
+          "validator" : {
+            "title" : "验证者",
+            "ledgerByFigmentTC" : "Figment 在 Ledger 的条款与条件"
+          },
+          "endDate" : {
+            "title" : "结束日期",
+            "text" : "选择本次委托的结束时间。本次委托的结束日期必须在 {{minEndDate}} 至 {{maxEndDate}} 之间。",
+            "label" : "委托结束日期"
+          },
+          "connectDevice" : {
+            "title" : "设备"
+          },
+          "confirmation" : {
+            "title" : "确认",
+            "success" : {
+              "title" : "您的资产已经成功委托。",
+              "text" : "该交易一经区块链确认，就会更新您的账户余额。",
+              "cta" : "查看详情"
+            },
+            "broadcastError" : "您的交易可能已失败。请稍候片刻并在重试之前查看交易记录。"
+          }
+        }
+      }
+    }
+  },
   "near" : {
     "account" : {
       "stakedBalance" : "已权益质押的余额",
@@ -3776,7 +3854,9 @@
       "runLocalAppDeleteButton" : "删除",
       "runLocalAppOpenButton" : "打开",
       "enableLearnStagingUrl" : "学习页面的模拟环境 URL 网页地址",
-      "enableLearnStagingUrlDesc" : "启用学习页面的模拟环境 URL 网址。"
+      "enableLearnStagingUrlDesc" : "启用学习页面的模拟环境 URL 网址。",
+      "openOnboardingAppInstallDebug" : "打开入门应用程序安装调试界面",
+      "openOnboardingAppInstallDebugDesc" : "打开一个界面，其中包含同步入门应用程序安装步骤中的组件"
     },
     "currencies" : {
       "selectPlaceholder" : "选择加密资产",
@@ -5356,7 +5436,7 @@
       "description" : "必须在 30 秒内予以签署。请重试。"
     },
     "TronNotEnoughEnergy" : {
-      "title" : "能量低于必要值。您可能需要支付高达 50TRX 的费用。"
+      "title" : "能量低于必要值。您可能需要支付高达 50 TRX 的费用。"
     },
     "PairingFailed" : {
       "title" : "配对不成功",
@@ -5510,6 +5590,9 @@
     "StellarBurnAddressError" : {
       "title" : "尝试添加恒星账户时出现问题"
     },
+    "AvalancheMinimumAmountError" : {
+      "title" : "最低数额为 25 AVAX"
+    },
     "HederaAddAccountError" : {
       "title" : "您的账户尚未添加。请再次尝试。"
     },
@@ -5520,6 +5603,10 @@
     "ImageLoadFromFileError" : {
       "title" : "从文件加载图片失败",
       "description" : "请使用另一张图片重试"
+    },
+    "ImageLoadFromNftError" : {
+      "title" : "从 NFT 加载图片失败",
+      "description" : "请使用另一个 NFT 重试"
     },
     "ImageDownloadError" : {
       "title" : "图片下载失败",
@@ -5593,6 +5680,13 @@
       "descriptionWithProductName" : "您需要先设置 {{ productName }}。\n我们将引导您完成设置流程。",
       "goToOnboardingButton" : "设置我的设备",
       "goToOnboardingButtonWithProductName" : "设置我的 {{ productName }}"
+    },
+    "EtherscanAPIError" : {
+      "title" : "未能提取交易",
+      "description" : "浏览器出现意外错误。请重试"
+    },
+    "GasEstimationError" : {
+      "title" : "未能估计 Gas 费用"
     }
   },
   "cryptoOrg" : {
@@ -5631,7 +5725,13 @@
         "stepLabel" : "选择一张图片",
         "description" : "选择要设为 (...) 的图片",
         "pickFromNftGallery" : "从我的 NFT 画廊中选择",
-        "upload" : "从我的计算机上传"
+        "myNfts" : "我的 NFT",
+        "upload" : "从我的计算机上传",
+        "chooseNft" : "选择 NFT",
+        "selectNft" : "选择 NFT",
+        "previousSelectNft" : "返回",
+        "nftEmptyStateTitle" : "暂时没有 NFT 可显示",
+        "nftEmptyStateDescription" : "首先将 NFT 添加到您的钱包"
       },
       "adjust" : {
         "stepLabel" : "调整图片",
@@ -5657,5 +5757,37 @@
     },
     "customImageSet" : "锁屏已设置",
     "finishCTA" : "完成"
+  },
+  "onboardingAppInstall" : {
+    "restore" : {
+      "title" : "是否安装与 {{deviceName}} 上相同的应用程序？",
+      "titleNoDeviceName" : "是否安装与上一台 Ledger 设备上相同的应用程序？",
+      "subtitle" : "您可以随时安装或删除应用程序。",
+      "installCTA" : "恢复应用程序",
+      "skipCTA" : "我以后再下载"
+    },
+    "default" : {
+      "title" : "{{ productName }} 使用应用程序完成安全的区块链交易",
+      "subtitle" : "我们建议下载一组默认应用程序。您以后可以下载更多。",
+      "installCTA" : "安装应用程序",
+      "skipCTA" : "我以后再下载"
+    },
+    "progress" : {
+      "loading" : "正在加载……",
+      "resolving" : "解决依赖关系",
+      "progress" : "正在安装应用程序 {{progress}}%",
+      "disclaimer" : "随时在 Ledger Live 中添加或删除应用程序。"
+    },
+    "cancelled" : {
+      "title" : "安装应用程序已在 {{productName}} 上被取消",
+      "subtitle" : "{{productName}} 需要区块链应用程序来批准您的加密货币和 NFT 交易。",
+      "installCTA" : "立即安装",
+      "skipCTA" : "我以后再下载"
+    },
+    "locked" : {
+      "title" : "您的 {{productName}} 已锁定",
+      "subtitle" : "请解锁您的 {{productName}} 并重新开始安装。",
+      "installCTA" : "重新开始安装"
+    }
   }
 }
